--- a/Sneaker_Site/styles.css
+++ b/Sneaker_Site/styles.css
@@ -10,6 +10,19 @@
   width: 100%;
   height: 100%;
   margin-left: 60px;
+  /* display: flex; */
+  /* justify-content: center;
+  align-items: center; */
+}
+
+#homePage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section {
+  padding: 10px 10%;
 }
 
 /* Navigation Tooltip Styling */
@@ -23,16 +36,21 @@
 #fp-nav.fp-left {
   background-color: #ed2d34;
   left: 0;
-  height: 100%;
+  height: 101%;
   display: grid;
   place-items: center;
   padding: 10px;
-  width: 60px;
+  width: 80px;
 }
 
 /* Product Page Styling, needed for modal */
 #productPage {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  /* padding: 10%; */
 }
 
 /* Coloring the navbar icons white */
@@ -41,6 +59,12 @@
   background-color: white;
   color: black;
 }
+
+/* #fp-nav ul li a span::before,
+#fp-nav ul li a span::after {
+  content: "-";
+  color: white; */
+/* } */
 
 /* Hide title and buttons */
 #product-slider h3,
@@ -51,7 +75,10 @@
 /* Product slider active item setting */
 #product-slider .active h3,
 #product-slider .active button {
-  display: block;
+  /* display: block; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Modal Styling */
@@ -60,7 +87,12 @@
 }
 
 #modal.modal-active {
-  display: block;
+  display: flex;
+  /* grid-template-areas: 
+  "one"
+  "two"; */
+  /* grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr; */
   position: absolute;
   top: 50%;
   left: 50%;
@@ -68,503 +100,494 @@
   border: 1px solid black;
   color: black;
   z-index: 100;
-  width: 50vw;
-  height: 50vh;
+  /* width: 80vw;
+  height: 80vh; */
+  width: 80vw;
+  height: 80vh;
   transform: translate(-50%, -50%);
 }
 /* Used to prevent the carousel from stretching the screen */
 .owl-carousel {
   overflow: hidden;
+  /* transition: all 3s linear; */
 }
 
 /* Used to scale down the home image. You can remove this. */
 img {
-  max-width: 40vw;
+  background-size: cover;
+  width: 500px;
 }
 
 /* PLEASE START YOUR STYLES UNDERNEATH THIS */
 
 body {
-  font-family: sans-serif;
-}
-.section {
-  background-image: url(./banner.jpg);
-}
-
-#productPage.content {
-  text-align: center;
-}
-
-.content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  text-align: center;
-}
-
-.home-heading {
-  font-size: 60px;
-  color: rgb(255, 0, 149);
-  display: flex;
-  flex-direction: column;
-}
-
-.sub {
-  color: rgb(0, 255, 21);
-}
-
-.home-details {
-  display: flex;
-  flex-direction: column;
-  max-width: 25%;
+  font-size: 30px;
+  font-family: "Montserrat", sans-serif;
+  background-image: url(./images/banner.jpg);
+  /* padding: 10px 10%; */
+  /* margin: 5px 5%; */
+  /* line-height: 60px; */
 }
 
 .btn {
-  background: whitesmoke;
-  border-radius: 20px;
-  border: 2px solid;
-  display: flex;
-  justify-content: center;
-  color: black;
-  width: 35%;
-  height: 45%;
+  font-size: 18px;
   text-decoration: none;
-  padding: 10px;
-  margin: 20px;
-  font-weight: bolder;
+  white-space: nowrap;
+  color: black;
+  border: 2px solid black;
+  border-radius: 50px;
+  padding: 10px 5%;
+  transition: all 0.3s linear;
+  margin-top: 10%;
+  /* line-height: 4em; */
 }
 
 .btn:hover {
-  background: rgb(132, 245, 245);
-  color: grey;
+  color: white;
+  background: #ed2d34;
+  border-color: #ed2d34;
 }
-.owl-carousel {
-  max-width: 700px;
+
+/* p.indent {
+  text-indent: 20%;
+} */
+
+.social-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: black; */
+  position: fixed;
+  top: 60px;
+  right: 10%;
+  z-index: 100;
+  font-size: 16px;
+  gap: 20px;
+}
+
+.social-icon .fab:hover {
+  background: #ed2d34;
+  transition: 0.3s ease-in-out;
+  color: white;
+  padding: 10px;
+  border-radius: 50px;
+}
+
+.page-header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-size: cover;
+  /* padding: 10%; */
+  /* flex-basis: 50%; */
+  /* overflow: hidden; */
+  /* object-fit: cover; */
+  /* margin-top: -100px; */
+  width: 100%;
+}
+
+.text-container {
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+  align-items: center;
+  /* left: 13%;
+  position: relative; */
+  text-align: center;
+  /* flex-basis: 50%; */
+  font-size: x-large;
+}
+
+#productPage {
+  /* padding: 10%; */
+}
+
+.product img {
+  height: 300px;
+  object-fit: contain;
 }
 
 .page-heading {
-  font-size: 50px;
+  /* right: 38%; */
+  /* position: relative; */
+}
+
+#productPage button:not(.close-btn) {
   display: flex;
   justify-content: center;
-}
-
-#productPage{
-  background-image: url();
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.page-header-container{
-  font-family: sans-serif;
-  font-size: 32px;
-}
-
-.product-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: opx 60px 30px 60px;
-  margin-bottom: 20px;
-}
-
-.counter {
-  margin-top: 25px;
-  font-family: sans-serif;
-  display: flex;
-  flex-direction: row;
-  text-align: center;
-}
-
-.counter,
-div{
-  margin-right: 60px;
-}
-
-.counter-number{
-  font-size: 40px;
-  margin-bottom: 10px;
-}
-
-.counter-text{
-  font-size: 16px;
-}
-
-.product-btn{
-  border: solid 2px rgb(6, 222, 230);
-  border-radius: 40px;
-  padding: 10px 40px;
+  align-items: center;
   text-decoration: none;
-  color: blue;
-  font-family: sans-serif;
-  font-size: 16px;
-  transition:  0.3s ease-in;
-}
-
-.product-btn:hover{
-  background-color: #ed2d34;
-  color: white;
-  border:solid 2px #ed2d34;
-}
-
-.product{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.product-img{
-  max-width: 250px;
-}
-.product h3{
-  font-family: sans-serif;
-  font-size: 28px;
-  margin: 20px 0;
-}
-#product-slider {
-  padding-top: 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-* PRODUCT SLIDER */
-#product-slider .product {
-/* width: 320px; */
-margin-top: 10%;
-text-align: center;
-}
-
-#product-slider .product img {
-width: 100%;
-}
-
-#product-slider .product h3 {
-font-size: 30px;
-margin-top: 30px;
-font-weight: bold;
-}
-
-#product-slider .product .btn {
-margin: 20px auto;
-}
-
-
-/* MODAL STYLES */
-#modal {
-width: 90%;
-border: none;
-padding: 2.5%;
-max-width: 1200px;
-/* WHY IS IT NOT IN THE ABSOLUTE CENTER? */
-/* HOW DO YOU MAKE THE BACKGROUND GREY WHEN IT SHOWS UP? */
-}
-
-/* CLOSE MODAL BUTTON */
-#modal .close-btn {
-top: 20px;
-right: 30px;
-width: 30px;
-border: none;
-height: 30px;
-font-size: 40px;
-cursor: pointer;
-position: absolute;
-background: #ffffff;
-}
-
-#modal .product-details {
-display: flex;
-justify-content: space-between;
-}
-
-#modal .product-details .product-images-container {
-width: 50%;
-padding-top: 50px;
-}
-
-#modal .product-details .product-images-container .main-image {
-width: 100%;
-margin-bottom: 50px;
-}
-
-#modal .product-details .product-images-container .alt-product-images {
-display: flex;
-justify-content: space-between;
-}
-
-#modal .product-details .product-images-container .alt-product-images img {
-width: 33.33%;
-margin-right: 15px;
-}
-
-#modal .product-details .product-images-container .alt-product-images img:not(:first-child) {
-opacity: .5;
-}
-
-#modal .product-details .product-details-container {
-width: 50%;
-padding: 2.5%;
-}
-
-#modal .product-details .product-details-container .page-heading {
-font-size: 18px;
-font-weight: 600;
-}
-
-#modal .product-details .product-details-container .page-subtitle {
-font-size: 42px;
-font-weight: bold;
-}
-
-#modal .product-details .product-details-container .product-description {
-margin: 50px 0;
-font-size: 18px;
-font-weight: 300;
-}
-
-/* PRODUCT SIZE CONTAINER */
-#modal .product-details .product-details-container .product-size-container {
-display: flex;
-align-items: center;
-margin-bottom: 20px;
-}
-
-#modal .product-details .product-details-container .product-size-container h6 {
-font-size: 20px;
-font-weight: 300;
-color: #ed2d34;
-margin-right: 20px;
-}
-
-#modal .product-details .product-details-container .product-size-container div {
-width: 100%;
-display: flex;
-justify-content: space-around;
-}
-
-#modal .product-details .product-details-container .product-size-container div p {
-opacity: .5;
-}
-
-/* PRODUCT QUANTITY CONTAINER AND COLOR*/
-#modal .product-details .product-details-container .product-quantity-and-color-container {
-display: flex;
-align-items: center;
-justify-content: space-between;
-}
-
-/* PRODUCT QUANTITY CONTAINER */
-#modal .product-details .product-details-container .product-quantity-container {
-display: flex;
-align-items: center;
-margin-bottom: 20px ;
-}
-
-#modal .product-details .product-details-container .product-quantity-container h6 {
-font-size: 20px;
-font-weight: 300;
-color: #ed2d34;
-margin-right: 20px;
-}
-
-#modal .product-details .product-details-container .product-quantity-container .quantity-container {
-width: 100%;
-display: flex;
-align-items: center;
-justify-content: flex-start;
-}
-
-#modal .product-details .product-details-container .product-quantity-container .quantity-container i {
-opacity: .5;
-padding: 5px;
-}
-
-#modal .product-details .product-details-container .product-quantity-container .quantity-container input {
-width: 35px;
-opacity: .5;
-border: none;
-font-size: 18px;
-font-weight: 300;
-text-align: center;
-}
-
-/* PRODUCT COLOR CONTAINER */
-#modal .product-details .product-details-container .product-color-container {
-display: flex;
-align-items: center;
-margin-bottom: 20px;
-}
-
-#modal .product-details .product-details-container .product-color-container h6 {
-font-size: 20px;
-font-weight: 300;
-color: #ed2d34;
-margin-right: 20px;
-}
-
-#modal .product-details .product-details-container .product-color-container .color-container {
-display: flex;
-align-items: center;
-}
-
-#modal .product-details .product-details-container .product-color-container .color-container .box{
-width: 20px;
-height: 20px;
-margin-right: 10px;
-}
-
-#modal .product-details .product-details-container .product-color-container .color-container .box.white {
-background: #ffffff;
-border: 1px solid #000000;
-}
-
-#modal .product-details .product-details-container .product-color-container .color-container .box.blue {
-background: #90cdf0;
-}
-
-#modal .product-details .product-details-container .product-color-container .color-container .box.peach {
-background: #f58357;
-}
-
-/* PRODUCT PRICE CONTAINER */
-#modal .product-details .product-details-container .product-price-container .product-price {
-margin: 25px 0;
-font-size: 48px;
-color: #ed2d34;
-font-weight: bold;
-}
-
-/* PRODUCT NAVIGATION */
-#modal .product-navigation {
-display: flex;
-justify-content: flex-end;
-}
-
-#modal .product-navigation button {
-width: 40px;
-height: 40px;
-margin: 10px;
-border-radius: 50%;
-text-align: center;
-background: #ffffff;
-border: solid 1px #202020;
-}
-
-#modal .product-navigation button {
-font-size: 20px;
-}
-
-
-
-.testimonial {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  max-width: 100%;
+  white-space: nowrap;
   color: black;
-  margin-top: 30%;
-  margin-right: 2%;
-}
-.main-color {
-  color: red;
-}
-
-h3 {
-  font-size: 30px;
-
-  margin: 40px;
-  display: flex;
-}
-
-.testimonial-img {
-  max-width: 70px;
-  border-radius: 50%;
-  height: 70%;
-  display: flex;
-  align-items: center;
-  margin: 30px auto 20px auto;
-}
-
-.page-header-container{
-  display: flex;
-  align-items: center;
-  text-align: center;
-  flex-direction: row;
-  flex-direction: column;
-  font-family: sans-serif;
-  box-sizing: border-box;
-  margin: 50px;
-  padding: 30px;
-
-}
-.page-subtitle {
-  font-size: 48px;
-  color: rgb(237, 45, 52);
-}
-.testimonial-message {
-  box-sizing: border-box;
+  background-color: white;
+  border: 2px solid black;
+  padding: 10px 5%;
+  border-radius: 50px;
   font-size: 18px;
-  font-weight: 200;
-  line-height: 25px;
-  text-align: center;
-  color: blue;
-  overflow-wrap: break-word;
-  font-family: sans-serif;
 }
 
-#testimonialPage {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  padding-top: 120px;
-  padding-bottom: 120px;
-  background-size: cover;
+#productPage button:hover {
+  background-color: #ed2d34;
+  border: #ed2d34;
+  color: white;
 }
 
-.section{
-  flex-direction: column;
+.slider-btn {
   display: flex;
-}
-
-.testimonial {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
   justify-content: center;
-  text-align: center;
+  align-items: center;
 }
 
-#contact-form{
-  display: flex;
-  align-items: right;
-  flex-direction: column;
-  padding: 5%;
-  float: right;
+#modal .slider-btn {
   width: 50%;
 }
 
-.contact-input{
-  padding: 5%;
-  margin: 3%;
-  border: none;
-  border-bottom: solid;
+.close-btn {
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding: 8px;
+  background-color: white;
+  border: 1px solid white;
 }
-.button{
-font-size: 16px;
-margin-top: 20px;
-color: #464646;
-font-weight: bold;
-padding: 15px 48px;
-border-radius: 50px;
-text-decoration: none;
-background:transparent;
-text-transform:uppercase ;
-border: 2px solid #464646;
+.buy-now {
+  text-decoration: none;
+  white-space: nowrap;
+  color: black;
+  border: 2px solid black;
+  border-radius: 50px;
+  text-align: center;
+  padding: 10px 15px;
+  font-size: 18px;
+}
 
+.buy-now:hover {
+  background-color: #ed2d34;
+  border: #ed2d34;
+  transition: all 0.3s linear;
+  color: white;
+}
+
+.modal-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  /* margin-left: 5%;
+  float: right; */
+  grid-column-start: 2;
+  grid-column-end: 3;
+  padding: 10%;
+  line-height: 60px;
+}
+
+.modal-left {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  /* grid-column-start: 1;
+  grid-column-end: 2;
+   */
+  width: 50%;
+}
+
+.sneaker-img {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  /* grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 3; */
+  height: 200px;
+}
+.sneaker-img img {
+  width: 30%;
+}
+
+/* for tiny screens */
+/* @media screen and (max-width: 440px) {
+  #fullpage {
+    width: 100vw;
+  }
+} */
+
+#color-btn {
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: white;
+  border: 1px solid white;
+  /* display: flex; */
+}
+
+.modal-p {
+  font-size: 16px;
+  line-height: 20px;
+  /* gap: 20px; */
+}
+
+.sneaker-1 {
+  height: 400px;
+}
+
+.text-size {
+  font-size: 16px;
+  /* line-height: 20px; */
+  color: grey;
+}
+/* 
+Testimonials */
+
+.page-header-testimonial {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  /* margin-bottom: 300px; */
+}
+
+.page-heading-testimonial{
+  font-size: xx-large;
+}
+
+.testimonial-heading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 16%;
+  font-size: 30px;
+}
+
+.testimonial-subtitle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+}
+
+#testimonial-slider {
+  margin-top: 5%;
+  align-items: center;
+  justify-content: center;
+}
+
+.testimonial-img {
+  display: flex;
+  align-items: center;
+  width: 40px;
+  max-width: 100px;
+  border-radius: 50%;
+  display: inline-block;
+  overflow: hidden;
+  border-style: none;
+  margin: auto;
+  padding: 10px;
+}
+
+.testimonial-message {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  border-radius: 25px;
+  font-family: sans-serif;
+  margin-bottom: 0 !important;
+  overflow-wrap: break-word;
+  font-size: 15px;
+  color: #464646;
+}
+
+.testimonial i {
+  display: flex;
+  font-size: 30px;
+  align-items: center;
+  justify-content: center;
+  color: #c6c6c6;
+  padding-bottom: 10%;
+}
+
+.testimonial-name {
+  font-size: 20px;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  font-family: sans-serif;
+  padding: 20px;
+  color: #464646;
+  margin: auto;
+  text-align: center;
+}
+
+/* .page-header-container1 {
+  font-size: xx-large;
+} */
+
+.contact-details-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  /* flex-direction: column; */
+  /* padding: 10%; */
+}
+
+.stuff {
+  display: flex;
+  flex-direction: column;
+}
+
+/* .page-heading1 {
+  color: #ed2d34;
+} */
+
+.page-subtitle {
+  color: #444;
+  /* font-size: xx-large; */
+}
+
+.contact-details-heading {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-top: 50px;
+  margin-bottom: 3%;
+  /* padding-bottom: 10%; */
+  color: #464646;
+  /* font-size: xx-large;
+  font-weight: 100; */
+}
+
+.contact-details-description {
+  font-size: 15px;
+  color: #464646;
+  padding-bottom: 5%;
+}
+
+/* .contact-details-container {
+  /* padding-bottom: 10%; */
+/* } */ */
+
+.LCE {
+  color: #464646;
+  display: flex;
+  flex-direction: column;
+  margin-top: 5%;
+}
+
+.location {
+  display: flex;
+  padding-bottom: 10%;
+}
+
+.cell {
+  display: flex;
+  padding-bottom: 10%;
+}
+
+.email {
+  display: flex;
+  padding-bottom: 10%;
+}
+
+.details {
+  margin-left: 20px;
+  font-size: smaller;
+}
+
+.fas {
+  font-size: xx-large;
+}
+
+form {
+  display: flex;
+  width: 35%;
+}
+
+.contact-input {
+  padding-top: 3%;
+  padding-bottom: 3%;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #999;
+  margin: 0 0 20px 0;
+}
+
+#contact-form {
+  display: flex;
+  flex-direction: column;
+  /* font-size: 20px;
+  font-weight: 200; */
+  margin-left: 20%;
+}
+
+.form-items {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.button {
+  padding: 3%;
+  border-radius: 30px;
+  text-transform: uppercase;
+  color: #ed2d34;
+  border: 2px solid #ed2d34;
+  font-size: large;
+}
+
+.button:hover {
+  background-color: #ed2d34;
+  transition: 1s;
+  color: white;
+}
+
+.icons {
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  border-radius: 50%;
+}
+
+.social {
+  display: flex;
+  flex-direction: row;
+  color: #444;
+  border-radius: 50%;
+}
+
+.icons:hover {
+  background-color: #ed2d34;
+  color: white;
+  border-radius: 50%;
+  transition: 1s;
+}
+
+.content-testimonial {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.home-details p {
+  font-size: 15px;
+}
+
+.home-details {
+  line-height: 60px;
+}
+
+.page-header-contact {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  /* margin-top: 200px; */
+  margin-bottom: 20px;
+}
+
+#contactPage {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
